# FacultyProjects

DataStructuresAndAlgorithms/Map/: CMakeLists.txt  main.cpp
DataStructuresAndAlgorithms/Map/ProiectC++/: App.cpp  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h
GraphAlgorithms/BFS/: BFS.cpp  BFS.h  adjacencyList.cpp  adjacencyList.h  main.cpp
GraphAlgorithms/DFS/: CMakeLists.txt  DFS.cpp  main.cpp
GraphAlgorithms/RepresentationOfGraphs/: CMakeLists.txt
GraphAlgorithms/TransitiveClosure/: main.cpp  transitiveClosureMatrix.cpp  transitiveClosureMatrix.h
ImmobileAdministrator/: CMakeLists.txt  apartment.c  block.c  business.c  business.h  domain.c  domain.h  expense.c  main.c  persistence.c  persistence.h  presentation.c  presentation.h  test.c  test.h  validation.c  validation.h
ImmobileAdministrator/business/: service.c  service.h
ImmobileAdministrator/domain/: apartment.c  block.c  expense.c  valueObject.c  valueObject.h
ImmobileAdministrator/persistence/: dynamicVector.c  dynamicVector.h  repository.c  repository.h
ImmobileAdministrator/presentation/: userInterface.c  userInterface.h
ImmobileAdministrator/test/: test.c
ImmobileAdministrator/validation/: validator.c  validator.h
OOP/ImmobileAdministrator/: main.c
OOP/ImmobileAdministrator/business/: service.c
OOP/ImmobileAdministrator/presentation/: userInterface.c
OOP/ImmobileAdministrator/test/: test.c
